[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scalerxmeta"
version = "0.1.0"
description = "ScalerX Meta project"
requires-python = ">=3.10"
dependencies = [
    "pydantic",
    "numpy",
    "openai>=1.3.8",
    "fastapi",
    "uvicorn",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:main"
